# Cross-Platform-Pass-Man

./: CMakeLists.txt  README.md
Sources/: app.cpp  app.hpp  encrypt.cpp  encrypt.hpp  generate key.cpp  generate key.hpp  generate password.cpp  generate password.hpp  interpret commands.cpp  interpret commands.hpp  main.cpp  parse.cpp  parse.hpp  passwords.cpp  passwords.hpp  write to clipboard.cpp  write to clipboard.hpp
dependencies/clip/: CMakeLists.txt
